<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chat</string>
    <string name="ok">Ok</string>
    <string name="chat">Chat</string>
    <string name="chat_message">Theme, wallpaper, chat history, font and emoji sizes</string>
    <string name="contacts">Contacts</string>
    <string name="file_storage">File Storage</string>
    <string name="profile_manage">Profile Manage</string>
    <string name="hello_blank_fragment">Hello blank Chat fragment</string>
    <string name="hello_contacts_blank_fragment">Hello blank Contacts fragment</string>
    <string name="hello_file_storage_blank_fragment">Hello blank File Storage fragment</string>
    <string name="hello_profile_manage_blank_fragment">Hello blank Profile Manage fragment</string>
    <string name="chats">Chats</string>
    <string name="search_chat">Search Chat</string>
    <string name="chats_empty">It seems like you don\'t have any chat yet</string>
    <string name="archive_chats_empty">It seems like you don\'t have any archived chat yet</string>
    <string name="media_empty">It seems like you don\'t have any media yet</string>
    <string name="docs_empty">It seems like you don\'t have any documents yet</string>
    <string name="links_empty">It seems like you don\'t have any links yet</string>
    <string name="new_chat">New Chat</string>
    <string name="chat_name">Chat Name</string>
    <string name="sample_text">This is a sample Text for showing sample of view</string>
    <string name="time">Time</string>
    <string name="archived_chats">Archived chats</string>
    <string name="new_message">New Secure Message</string>
    <string name="cancel">Cancel</string>
    <string name="search_name">Search name or ID</string>
    <string name="add_new_contact">Add new Contact</string>
    <string name="create_new_group">Create new group</string>
    <string name="create_group">Create group</string>
    <string name="add_contact">Add contact</string>
    <string name="add_contact_descp">Please enter the User ID of the contact you \nwould like to add or scan QR code</string>
    <string name="scan_qr">Scan QR</string>
    <string name="search_name_or_id">Search name</string>
    <string name="letter">A</string>
    <string name="userid">~userID</string>
    <string name="or">OR</string>
    <string name="add_existing">Add an existing contact</string>
    <string name="search_chat_or_file_name">Search chat or file name</string>
    <string name="group_chats">Group chats</string>
    <string name="count">0</string>
    <string name="one_to_one_chats">One to one chats</string>
    <string name="title_of_fragment">Title of fragment</string>
    <string name="search_group_name">Search group name</string>
    <string name="user_account">My Account</string>
    <string name="ak">AK</string>
    <string name="notification_settings">Notification settings</string>
    <string name="privacy_and_policy">Privacy and policy</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_message">Manange calls, message tones, vibrate, sound and message preview</string>
    <string name="allow_all_notifications">Allow all notifications</string>
    <string name="starts_new_chat">Somone starts new chat with you</string>
    <string name="new_group">New group</string>
    <string name="adds_in_new_group">Somone adds you in new group</string>
    <string name="nickname_alert">Nickname alert</string>
    <string name="sets_nickname">Somone sets your new nickname</string>
    <string name="subscription_near_end">Alerts you when subscription near to end</string>
    <string name="subscription_alert">Subscription alert</string>
    <string name="group_members">Group Members</string>
    <string name="sample_text_receive">Good morning! My name is Steven. I am a UX Designer from London and this is an example of a long message</string>
    <string name="sample_text_send">We’re still waiting on the offer on our house to go through but I guess this type of thing can take a long time</string>
    <string name="add_group_description">Add group description</string>
    <string name="media_doc_and_links">Media, Doc and links</string>
    <string name="members">Members</string>
    <string name="created_on_01_01_2002">Created on 01/01/2002</string>
    <string name="add_members">Add members</string>
    <string name="view_all">View all</string>
    <string name="exit_group">Exit group</string>
    <string name="delete_group">Delete group</string>
    <string name="group_descriptions_will_be_visible_to_members_of_this_group">Group descriptions will be visible to members of this group</string>
    <string name="media">Media</string>
    <string name="docs">Docs</string>
    <string name="links">Links</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="save">Save</string>
    <string name="label">Label</string>
    <string name="file_name">File Name</string>
    <string name="file_size_type"><![CDATA[File size & type]]></string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="set_nickname_here">Set your nickname</string>
    <string name="your_nickname_will_be_visible_to_your_contacts">Your nickname will be visible to your contacts</string>
    <string name="file_title">File Title</string>
    <string name="control_for_audio">Control For Audio</string>
    <string name="forwarded">Forwarded</string>
    <string name="dash">-</string>
    <string name="file_size">File Size</string>
    <string name="pages_count">Pages Count</string>
    <string name="forward_to">Forward to</string>
    <string name="share">Share</string>
    <string name="error">Alert</string>
    <string name="n_a">N/A</string>
    <string name="time_inyerval_format_template">%1$s to %2$s</string>
    <string name="required">Required</string>
    <string name="_1">(1)</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
        <item name="video">Video</item>
        <item name="file">File</item>
    </string-array>
    <string name="exceptionInErrorResponse">Exception in parsing error response.</string>
    <string name="timeout">Request timed out</string>
    <string name="connectException">Unable to connect host</string>
    <string name="invalid_data">Invalid data receied.</string>
    <string name="ssl">SSL cetificate error. Unable to handshake</string>
    <string name="text_somethingwentwrong">Something went wrong. Please try again</string>
    <string name="pleaseWait">Please wait ...</string>
    <string name="no_internet">No internet Connection.</string>
    <string name="key">lakjfalsjfiosdjl fowi 029u4893rji9pq3fw</string>
    <string name="salt">sd;lfja094rjmo3wf90iewdf</string>
    <string name="downloading">downloading</string>
    <string name="title_file_download">File</string>
    <string name="sharedUserLabel">SharedUserId</string>
    <string name="vpn_on">VPN ON</string>
    <string name="vpn_off">VPN OFF</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="secret">Shared Secret:</string>
    <string name="proxyhost">HTTP proxy hostname</string>
    <string name="proxyport">HTTP proxy port</string>
    <string name="packages">Packages (comma separated):</string>
    <string name="allowed">Allow</string>
    <string name="disallowed">Disallow</string>
    <string name="connected">ToyVPN is connected!</string>
    <string name="disconnected">ToyVPN is disconnected!</string>
    <string name="incomplete_proxy_settings">
        Incomplete proxy settings. For HTTP proxy we require both hostname and port settings.
    </string>
    <string name="unknown_package_names">
        Some of the specified package names do not correspond to any installed packages.
    </string>
    <string name="chat_id">CHAT ID</string>
    <string name="chat_id_all_caps">Chat ID</string>
    <string name="set_your_nickname_and_profile_picture">Set your nickname and profile picture</string>
    <string name="disappearing_messages">Disappearing messages</string>
    <string name="disappearing_messages_note">Start new chats with disappearing timer according to your settings</string>
    <string name="off">Off</string>
    <string name="nickname">Nickname</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="cannot_send">Group doesn’t exists</string>
    <string name="block_alert">This user wont be able to send you the messages. Are you sure you want to block?</string>
    <string name="unblock_alert">This user will be able to send you the messages. Are you sure you want to unblock?</string>
    <string name="remove_member_alert">Are you sure you want to remove member?</string>
    <string name="delete_alert">This user will no longer available in your contacts. Are you sure you want to delete?</string>
    <string name="clear_alert">You wont have history of this chat. Are you sure you want to clear?</string>
    <string name="leave_group_alert">You wont be able to send and receive messages from this group</string>
    <string name="delete_group_alert">This group will no longer exists in your chats</string>
    <string name="owner_change_alert">You will no longer be owner of the group.Please choose the owner before leaving the group</string>
    <string name="blocked_contacts">Blocked contacts</string>
    <string name="leave_group">Leave Group</string>
    <string name="clear_chat_notification">This feature will allow you to clear chat from certain time frame</string>
    <string name="clear_chat_notification_dialog">Are you sure you want to clear all the chat history?</string>
    <string name="wipe_chat_notification_dialog">You won’t be able to retrieve your chat.\nAre you sure you want to proceed?</string>
    <string name="destroy_group_notification_dialog">You will no longer be able to send and receive messages in this group</string>
    <string name="start_new_conversation_with">Start new conversation with</string>
    <string name="_10_seconds">10 seconds</string>
    <string name="_30_seconds">30 seconds</string>
    <string name="_1_minute">1 minute</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_2_hours">2 hours</string>
    <string name="_1_week">1 week</string>
    <string name="_1_day">1 day</string>
    <string name="ExpireTimerSettingsFragment__custom_time">Custom</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="group_settings">Group Settings</string>
    <string name="media_restrictions_enabled">Media restrictions %s</string>
    <string name="tap_to_reveal_settings_enabled">Tap to reveal settings %s</string>
    <string name="disappearing_settings_are_enabled_and_all_messages_will_disappear_after_7_days">Disappearing settings are enabled and all messages will disappear after %s</string>
    <string name="subscription_ended">Service is unavailable, plan is expired.</string>
</resources>