<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.MediaDetailsActivity">

        <TextView
            android:id="@+id/tvSubs"
            style="@style/Chat.Text.Subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_ended"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/deep_black"
            app:theme="@style/ToolbarTheme">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/astronomus_regular"
                    android:gravity="start"
                    android:letterSpacing="-0.01"
                    android:maxLines="1"
                    android:text="@string/chat_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_share"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_share_tinted_24"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@id/iv_delete"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:alpha="0.4"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/gray_variant" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_6sdp"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/blue"
            app:tabMode="fixed"
            android:background="@color/deep_black"
            app:tabPadding="@dimen/_12sdp"
            app:tabTextAppearance="@style/tab_text">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/add_medication_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/qr_scanner_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/docs" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/rx_number_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/links" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_window_fill_color" />

    </LinearLayout>

</layout>
