<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_window_fill_color"
        android:nestedScrollingEnabled="true"
        tools:context=".activities.ShareToActivity">

        <TextView
            android:id="@+id/tvSubs"
            style="@style/Chat.Text.Subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_ended"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:titleTextColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubs"

            app:theme="@style/ToolbarThemeHomeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:fontFamily="@font/astronomus_regular"
                    android:gravity="start"
                    android:letterSpacing="-0.01"
                    android:text="@string/forward_to"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17sdp"
                    android:fontFamily="@font/astronomus_regular"
                    android:gravity="start"
                    android:letterSpacing="-0.01"
                    android:text="@string/share"
                    android:textColor="@color/gray_variant"
                    android:textSize="@dimen/_14ssp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_search_view"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/search_chat"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/gray_variant_80"
            android:theme="@style/SearchViewTheme"
            app:defaultQueryHint="@string/search_chat"
            app:iconifiedByDefault="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:queryBackground="@android:color/transparent" />

        <TextView
            android:id="@+id/tv_label_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/astronomus_regular"
            android:text="@string/recent_chats"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@+id/rv_members_share"
            app:layout_constraintTop_toBottomOf="@id/search_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_members_share"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintBottom_toTopOf="@id/tv_label_contact"
            app:layout_constraintTop_toBottomOf="@id/tv_label_recent" />

        <TextView
            android:id="@+id/tv_label_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:fontFamily="@font/astronomus_regular"
            android:text="@string/contacts"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@+id/rv_contacts_share"
            app:layout_constraintTop_toBottomOf="@id/rv_members_share" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_contacts_share"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_contact" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>